--- a/src/app/components/post/post-details/post-details.component.html
+++ b/src/app/components/post/post-details/post-details.component.html
@@ -1,3 +1,10 @@
-<p>
-  post-details works!
-</p>
+<div>
+  <h1>{{post?.title}}</h1>
+  <p>{{post?.body}}</p>
+  <ul *ngFor="let comment of comments">
+    <li>{{comment.id}}
+      <h6>{{comment.name}}</h6>
+      {{comment.body}}</li>
+  </ul>
+  <button (click)="backToPosts()">Go Back</button>
+</div>
