--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,11 @@
 body{
   font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
 }
+
+label{
+  display: block;
+}
+
+button{
+  margin: 5px 0 5px 0;
+}
