--- a/src/app/components/post/post-list/post-list.component.css
+++ b/src/app/components/post/post-list/post-list.component.css
@@ -1,3 +1,25 @@
+nav{
+  text-align: center;
+}
+
+.centered{
+  text-align: center;
+}
+
+.main{
+  height: auto;
+  width: auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: justify;
+}
+
+button{
+  margin: 5px 0 5px 0;
+}
+
 table {
   width: 100%;
   font-size: 14px;
