--- a/src/app/components/post/post-list/post-list.component.html
+++ b/src/app/components/post/post-list/post-list.component.html
@@ -9,7 +9,7 @@
       <th>Comments</th>
       <th>Author</th>
     </tr>
-    <tr *ngFor="let post of pagedItems">
+    <tr *ngFor="let post of posts">
       <td>{{post.id}}</td>
       <td>
         <a routerLink="/post/{{post.id}}">{{post.title}}</a>
@@ -23,23 +23,7 @@
     </tr>
   </table>
   <div class="centered">
-    <ul *ngIf="pager.pages && pager.pages.length" class="pagination">
-      <li [ngClass]="{disabled:pager.currentPage === 1}">
-        <a (click)="setPage(1)">First</a>
-      </li>
-      <li [ngClass]="{disabled:pager.currentPage === 1}">
-        <a (click)="setPage(pager.currentPage - 1)">Previous</a>
-      </li>
-      <li *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
-        <a (click)="setPage(page)">{{page}}</a>
-      </li>
-      <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-        <a (click)="setPage(pager.currentPage + 1)">Next</a>
-      </li>
-      <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-        <a (click)="setPage(pager.totalPages)">Last</a>
-      </li>
-    </ul>
+    <app-pagination [pagination]="pagination"></app-pagination>
   </div>
 </div>
 
